[gd_scene load_steps=7 format=2]

[ext_resource path="res://data/pauseMenu/pause.png" type="Texture" id=1]
[ext_resource path="res://data/scenes/NewButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/pauseMenu/resume.png" type="Texture" id=3]
[ext_resource path="res://data/pauseMenu/options.png" type="Texture" id=4]
[ext_resource path="res://data/pauseMenu/exit.png" type="Texture" id=5]
[ext_resource path="res://data/scripts/pauseMenu.gd" type="Script" id=6]

[node name="pauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 129.0
margin_top = 116.0
margin_right = 509.0
margin_bottom = 259.0
mouse_filter = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 41.0
margin_right = 380.0
margin_bottom = 101.0
alignment = 1

[node name="Buttons" type="HBoxContainer" parent="Menu/HBoxContainer"]
margin_left = 40.0
margin_right = 340.0
margin_bottom = 60.0
mouse_filter = 0
custom_constants/separation = 60

[node name="Settings" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Settings" index="0"]
texture = ExtResource( 4 )

[node name="Resume" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 0.0
margin_right = 180.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Resume" index="0"]
texture = ExtResource( 3 )

[node name="Exit" parent="Menu/HBoxContainer/Buttons" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )

[node name="TextureRect" parent="Menu/HBoxContainer/Buttons/Exit" index="0"]
texture = ExtResource( 5 )
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Resume" to="." method="_on_Resume_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/HBoxContainer/Buttons/Exit" to="." method="_on_Exit_pressed"]

[editable path="Menu/HBoxContainer/Buttons/Settings"]

[editable path="Menu/HBoxContainer/Buttons/Resume"]

[editable path="Menu/HBoxContainer/Buttons/Exit"]
